--- a/style.css
+++ b/style.css
@@ -57,6 +57,15 @@ i {
   align-items: center;
   justify-content: center;
   margin-top: 14px;
+  color: #FFF;
+}
+
+.logotipo{
+    width: 300px;
+}
+
+.maps{
+    width: 300px;
 }
 
 @media screen and (max-width: 768px) {
