--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ i {
     font-size: 34px;
   }
   .header-logo img {
-    width: 160px;
-    margin-top: 46px;
+    width: 200px;
+    margin-top: 40px;
   }
   .header-button {
     display: none;
@@ -259,6 +259,7 @@ i {
   width: 100%;
   max-width: 354px;
   transition: transform 0.2s;
+  aspect-ratio: 1/1;
 }
 
 .painel img:hover {
@@ -275,14 +276,15 @@ i {
   z-index: 99;
 }
 
-.painel-info button {
+.painel-info a {
   color: #FFF;
   background-color: #d94140;
   padding: 4px 8px;
   border-radius: 4px;
   border: 0;
-  cursor: default;
+  cursor: pointer;
 }
+
 
 @media screen and (max-width: 768px) {
   .paineis {
@@ -297,7 +299,7 @@ i {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 54px 0;
+  padding: 30px 0;
   gap: 24px;
   color: #FFF;
 }
