--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ i {
     font-size: 14px;
   }
 
-.button-contact {
+.a {
   padding: 10px 15px;
   color: #FFF;
   background-color: #bba909;
@@ -185,7 +185,7 @@ i {
     font-size: 24px;
   }
 
-  .button-contact {
+  .a {
   padding: 10px 15px;
   color: #FFF;
   background-color: #bba909;
