--- a/style.css
+++ b/style.css
@@ -169,14 +169,14 @@ i {
     font-size: 14px;
   }
 
-.a {
-  padding: 10px 10px;
-  color: #FFF;
-  background-color: #bba909;
-  border: 0;
-  font-size: 10px;
-  font-weight: 400;
-  margin: 10px 0;
+.hero a {
+    padding: 18px 15px;
+    color: #FFF;
+    background-color: #bba909;
+    border: 0;
+    font-size: 15px;
+    font-weight: 600;
+    margin: 14px 0;
 }
 
 }
@@ -185,14 +185,14 @@ i {
     font-size: 24px;
   }
 
-  .a {
-  padding: 10px 10px;
-  color: #FFF;
-  background-color: #bba909;
-  border: 0;
-  font-size: 10px;
-  font-weight: 400;
-  margin: 10px 0;
+  .hero a{
+    padding: 18px 15px;
+    color: #FFF;
+    background-color: #bba909;
+    border: 0;
+    font-size: 16px;
+    font-weight: 800;
+    margin: 10px 0;
 }
 }
 .about {
