--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ i {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 30px 0;
+  padding: 30px 10px;
   gap: 24px;
   color: #FFF;
 }
